--- a/TheMovieDatabase/Movie/movies.storyboard
+++ b/TheMovieDatabase/Movie/movies.storyboard
@@ -17,7 +17,23 @@
                     <view key="view" contentMode="scaleToFill" id="bPP-nW-AAe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search movies" showsSearchResultsButton="YES" showsCancelButton="YES" showsScopeBar="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obw-LY-YXo">
+                                <rect key="frame" x="0.0" y="88" width="414" height="100"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Popular</string>
+                                    <string>Top rated</string>
+                                    <string>Upcomming</string>
+                                </scopeButtonTitles>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="obw-LY-YXo" firstAttribute="top" secondItem="Bwt-pv-DnO" secondAttribute="top" id="9cT-J3-Vcv"/>
+                            <constraint firstItem="obw-LY-YXo" firstAttribute="trailing" secondItem="Bwt-pv-DnO" secondAttribute="trailing" id="Yl5-rr-zR3"/>
+                            <constraint firstItem="obw-LY-YXo" firstAttribute="leading" secondItem="Bwt-pv-DnO" secondAttribute="leading" id="cYI-Uk-SSz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bwt-pv-DnO"/>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="psK-fq-fyA"/>
