--- a/TheMovieDatabase/Movie/Movie.storyboard
+++ b/TheMovieDatabase/Movie/Movie.storyboard
@@ -11,38 +11,6 @@
     </dependencies>
     <scenes>
         <!--Movies-->
-        <scene sceneID="WzK-RJ-uw8">
-            <objects>
-                <viewController id="QV2-fS-e1Z" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="bPP-nW-AAe">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search movies" showsSearchResultsButton="YES" showsCancelButton="YES" showsScopeBar="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obw-LY-YXo">
-                                <rect key="frame" x="0.0" y="88" width="414" height="100"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <scopeButtonTitles>
-                                    <string>Popular</string>
-                                    <string>Top rated</string>
-                                    <string>Upcomming</string>
-                                </scopeButtonTitles>
-                            </searchBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="obw-LY-YXo" firstAttribute="top" secondItem="Bwt-pv-DnO" secondAttribute="top" id="9cT-J3-Vcv"/>
-                            <constraint firstItem="obw-LY-YXo" firstAttribute="trailing" secondItem="Bwt-pv-DnO" secondAttribute="trailing" id="Yl5-rr-zR3"/>
-                            <constraint firstItem="obw-LY-YXo" firstAttribute="leading" secondItem="Bwt-pv-DnO" secondAttribute="leading" id="cYI-Uk-SSz"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Bwt-pv-DnO"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Movies" id="psK-fq-fyA"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rSz-Dr-TXJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="261" y="139"/>
-        </scene>
-        <!--Movies-->
         <scene sceneID="1GH-D2-5YI">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ABN-3k-GFV" sceneMemberID="viewController">
@@ -55,12 +23,73 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="QV2-fS-e1Z" kind="relationship" relationship="rootViewController" id="AwY-ew-hP9"/>
+                        <segue destination="ooQ-ve-paN" kind="relationship" relationship="rootViewController" id="v3G-Cl-PsF"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o9S-X8-hQG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-496" y="139"/>
+        </scene>
+        <!--Movies-->
+        <scene sceneID="R18-5h-zjZ">
+            <objects>
+                <viewController id="ooQ-ve-paN" customClass="MovieViewController" customModule="TheMovieDatabase" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WSz-dx-cPU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KAe-Ur-NAn">
+                                <rect key="frame" x="0.0" y="188" width="414" height="625"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YYZ-St-rVO">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                            <searchBar contentMode="scaleAspectFill" searchBarStyle="minimal" placeholder="Search movie" showsCancelButton="YES" showsScopeBar="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Fa-YT-qK5">
+                                <rect key="frame" x="0.0" y="88" width="414" height="100"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Popular</string>
+                                    <string>Top rated</string>
+                                    <string>Upcoming</string>
+                                </scopeButtonTitles>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KAe-Ur-NAn" firstAttribute="bottom" secondItem="OPZ-rh-eXc" secondAttribute="bottom" id="1ZO-Vd-O0t"/>
+                            <constraint firstItem="4Fa-YT-qK5" firstAttribute="leading" secondItem="OPZ-rh-eXc" secondAttribute="leading" id="1am-kl-JI3"/>
+                            <constraint firstItem="4Fa-YT-qK5" firstAttribute="top" secondItem="OPZ-rh-eXc" secondAttribute="top" id="5XL-Pr-iUG"/>
+                            <constraint firstItem="KAe-Ur-NAn" firstAttribute="leading" secondItem="OPZ-rh-eXc" secondAttribute="leading" id="U65-CG-yFV"/>
+                            <constraint firstItem="KAe-Ur-NAn" firstAttribute="trailing" secondItem="OPZ-rh-eXc" secondAttribute="trailing" id="b9f-OM-M6T"/>
+                            <constraint firstItem="KAe-Ur-NAn" firstAttribute="top" secondItem="4Fa-YT-qK5" secondAttribute="bottom" id="e9m-pd-EFb"/>
+                            <constraint firstItem="4Fa-YT-qK5" firstAttribute="trailing" secondItem="OPZ-rh-eXc" secondAttribute="trailing" id="npW-qd-VqE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="OPZ-rh-eXc"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Movies" id="zEC-0V-vui"/>
+                    <connections>
+                        <outlet property="collectionView" destination="KAe-Ur-NAn" id="MtX-xc-QVk"/>
+                        <outlet property="searchBar" destination="4Fa-YT-qK5" id="xIQ-1w-tHm"/>
+                        <outlet property="searchDisplayController" destination="hal-1A-Wz2" id="K6D-5t-peN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lbF-Aw-U3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="hal-1A-Wz2">
+                    <connections>
+                        <outlet property="delegate" destination="ooQ-ve-paN" id="Vqu-XO-PPt"/>
+                        <outlet property="searchContentsController" destination="ooQ-ve-paN" id="P0u-tP-piA"/>
+                        <outlet property="searchResultsDataSource" destination="ooQ-ve-paN" id="vJe-Id-YmU"/>
+                        <outlet property="searchResultsDelegate" destination="ooQ-ve-paN" id="72i-wb-7RW"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="311.59420289855075" y="138.61607142857142"/>
         </scene>
     </scenes>
     <resources>
