--- a/TheMovieDatabase/Movie/Controller/MovieViewController.xib
+++ b/TheMovieDatabase/Movie/Controller/MovieViewController.xib
@@ -12,6 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieViewController" customModule="TheMovieDatabase" customModuleProvider="target">
             <connections>
+                <outlet property="posterImage" destination="0Jb-Gd-SeU" id="oMy-7a-A6X"/>
+                <outlet property="titleLabel" destination="LCk-UL-jR9" id="yql-8F-UP8"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,18 +22,50 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-image" translatesAutoresizingMaskIntoConstraints="NO" id="XEQ-14-b3X">
-                    <rect key="frame" x="0.0" y="44" width="414" height="264"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cVJ-t8-15Z">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-image" translatesAutoresizingMaskIntoConstraints="NO" id="0Jb-Gd-SeU">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="327"/>
+                        </imageView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DQS-mD-YQZ">
+                            <rect key="frame" x="0.0" y="327" width="414" height="44"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCk-UL-jR9">
+                                    <rect key="frame" x="10" y="11.5" width="394" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" red="0.2470588235" green="0.71764705880000002" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstItem="LCk-UL-jR9" firstAttribute="centerY" secondItem="DQS-mD-YQZ" secondAttribute="centerY" id="6aL-rF-IXj"/>
+                                <constraint firstAttribute="trailing" secondItem="LCk-UL-jR9" secondAttribute="trailing" constant="10" id="bqa-nx-Lym"/>
+                                <constraint firstItem="LCk-UL-jR9" firstAttribute="leading" secondItem="DQS-mD-YQZ" secondAttribute="leading" constant="10" id="kPa-yc-Dwv"/>
+                                <constraint firstAttribute="height" constant="44" id="qp6-BY-vkO"/>
+                            </constraints>
+                        </view>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="264" id="P0R-fP-2MT"/>
+                        <constraint firstItem="0Jb-Gd-SeU" firstAttribute="width" secondItem="cVJ-t8-15Z" secondAttribute="width" id="9LC-k0-BhP"/>
+                        <constraint firstItem="0Jb-Gd-SeU" firstAttribute="top" secondItem="cVJ-t8-15Z" secondAttribute="top" id="GCo-W2-yxN"/>
+                        <constraint firstItem="0Jb-Gd-SeU" firstAttribute="height" secondItem="cVJ-t8-15Z" secondAttribute="height" multiplier="0.4" id="Ia8-mc-PlS"/>
+                        <constraint firstItem="0Jb-Gd-SeU" firstAttribute="leading" secondItem="cVJ-t8-15Z" secondAttribute="leading" id="O2z-Qn-2Jb"/>
+                        <constraint firstAttribute="trailing" secondItem="0Jb-Gd-SeU" secondAttribute="trailing" id="Q3K-Xq-K0K"/>
+                        <constraint firstItem="DQS-mD-YQZ" firstAttribute="top" secondItem="0Jb-Gd-SeU" secondAttribute="bottom" id="YZU-CU-gM0"/>
+                        <constraint firstAttribute="trailing" secondItem="DQS-mD-YQZ" secondAttribute="trailing" id="Zr9-Zb-zMb"/>
+                        <constraint firstItem="DQS-mD-YQZ" firstAttribute="leading" secondItem="cVJ-t8-15Z" secondAttribute="leading" id="dpP-EN-jhO"/>
+                        <constraint firstAttribute="bottom" secondItem="DQS-mD-YQZ" secondAttribute="bottom" constant="447" id="yss-Cd-I4c"/>
                     </constraints>
-                </imageView>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="XEQ-14-b3X" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="FyT-Le-3E3"/>
-                <constraint firstItem="XEQ-14-b3X" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="WVK-QI-mqk"/>
-                <constraint firstItem="XEQ-14-b3X" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="vgf-jg-FHc"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="cVJ-t8-15Z" secondAttribute="trailing" id="0Ux-JK-SOJ"/>
+                <constraint firstItem="cVJ-t8-15Z" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Jzr-tU-uKJ"/>
+                <constraint firstItem="cVJ-t8-15Z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="QBu-GZ-EI7"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="cVJ-t8-15Z" secondAttribute="bottom" id="SC4-WY-43s"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="131.8840579710145" y="102.45535714285714"/>
