--- a/TheMovieDatabase/Detail/Controller/DetailViewController.xib
+++ b/TheMovieDatabase/Detail/Controller/DetailViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieViewController" customModule="TheMovieDatabase" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="TheMovieDatabase" customModuleProvider="target">
             <connections>
                 <outlet property="posterImage" destination="0Jb-Gd-SeU" id="oMy-7a-A6X"/>
                 <outlet property="titleLabel" destination="LCk-UL-jR9" id="yql-8F-UP8"/>
