--- a/TheMovieDatabase/Detail/View/CastCollectionViewCell.xib
+++ b/TheMovieDatabase/Detail/View/CastCollectionViewCell.xib
@@ -13,46 +13,86 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CastCollectionViewCell" customModule="TheMovieDatabase" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="435" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="448" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="435" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="448" height="80"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-image" translatesAutoresizingMaskIntoConstraints="NO" id="L1g-cK-Nvb">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gU8-hW-VIs">
+                        <rect key="frame" x="0.0" y="0.0" width="448" height="79"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KMw-3u-fnr">
+                                <rect key="frame" x="63" y="46" width="46.5" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46.5" id="Op8-wf-HTn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cja-ju-CXR">
+                                <rect key="frame" x="119.5" y="47" width="318.5" height="16.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Character:" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7iK-3o-Sp4">
+                                <rect key="frame" x="63" y="15" width="76" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="76" id="vdO-r4-Rc1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T0w-Fd-GfB">
+                                <rect key="frame" x="149" y="16" width="289" height="16.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-image" translatesAutoresizingMaskIntoConstraints="NO" id="L1g-cK-Nvb">
+                                <rect key="frame" x="0.0" y="0.0" width="53" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="53" id="ofR-1J-aBN"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="ofR-1J-aBN"/>
+                            <constraint firstAttribute="trailing" secondItem="T0w-Fd-GfB" secondAttribute="trailing" constant="10" id="KM8-ai-Pun"/>
+                            <constraint firstItem="cja-ju-CXR" firstAttribute="centerY" secondItem="KMw-3u-fnr" secondAttribute="centerY" id="PVX-Mq-qxk"/>
+                            <constraint firstItem="L1g-cK-Nvb" firstAttribute="leading" secondItem="gU8-hW-VIs" secondAttribute="leading" id="Syn-7d-kTG"/>
+                            <constraint firstItem="7iK-3o-Sp4" firstAttribute="top" secondItem="gU8-hW-VIs" secondAttribute="top" constant="15" id="UdH-Qc-gAP"/>
+                            <constraint firstAttribute="bottom" secondItem="L1g-cK-Nvb" secondAttribute="bottom" id="WKj-Ha-0mZ"/>
+                            <constraint firstAttribute="trailing" secondItem="cja-ju-CXR" secondAttribute="trailing" constant="10" id="d25-hM-BM8"/>
+                            <constraint firstItem="L1g-cK-Nvb" firstAttribute="top" secondItem="gU8-hW-VIs" secondAttribute="top" id="fXV-tQ-UYd"/>
+                            <constraint firstItem="T0w-Fd-GfB" firstAttribute="leading" secondItem="7iK-3o-Sp4" secondAttribute="trailing" constant="10" id="iiU-6D-uTE"/>
+                            <constraint firstAttribute="bottom" secondItem="KMw-3u-fnr" secondAttribute="bottom" constant="15" id="lWn-v4-ZIr"/>
+                            <constraint firstItem="7iK-3o-Sp4" firstAttribute="leading" secondItem="L1g-cK-Nvb" secondAttribute="trailing" constant="10" id="q4r-j1-zfw"/>
+                            <constraint firstItem="cja-ju-CXR" firstAttribute="leading" secondItem="KMw-3u-fnr" secondAttribute="trailing" constant="10" id="q9r-ba-gYV"/>
+                            <constraint firstItem="T0w-Fd-GfB" firstAttribute="centerY" secondItem="7iK-3o-Sp4" secondAttribute="centerY" id="qbV-jL-DtZ"/>
+                            <constraint firstItem="KMw-3u-fnr" firstAttribute="leading" secondItem="L1g-cK-Nvb" secondAttribute="trailing" constant="10" id="yBC-c9-Ezd"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KMw-3u-fnr">
-                        <rect key="frame" x="110" y="20" width="46.5" height="18"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Character:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7iK-3o-Sp4">
-                        <rect key="frame" x="110" y="48" width="76" height="18"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </view>
                 </subviews>
             </view>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="L1g-cK-Nvb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="AnD-N6-WVc"/>
-                <constraint firstItem="7iK-3o-Sp4" firstAttribute="top" secondItem="KMw-3u-fnr" secondAttribute="bottom" constant="10" id="Fi9-b9-JfT"/>
-                <constraint firstItem="KMw-3u-fnr" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="T0p-4c-BwK"/>
-                <constraint firstAttribute="bottom" secondItem="L1g-cK-Nvb" secondAttribute="bottom" id="cTc-tw-g2x"/>
-                <constraint firstItem="L1g-cK-Nvb" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ecE-xz-roO"/>
-                <constraint firstItem="7iK-3o-Sp4" firstAttribute="leading" secondItem="L1g-cK-Nvb" secondAttribute="trailing" constant="10" id="gE9-D9-Brj"/>
-                <constraint firstItem="KMw-3u-fnr" firstAttribute="leading" secondItem="L1g-cK-Nvb" secondAttribute="trailing" constant="10" id="r4n-v7-xhB"/>
-                <constraint firstItem="KMw-3u-fnr" firstAttribute="leading" secondItem="L1g-cK-Nvb" secondAttribute="trailing" constant="10" id="skP-5p-2Og"/>
+                <constraint firstAttribute="bottom" secondItem="gU8-hW-VIs" secondAttribute="bottom" constant="1" id="3GY-Qe-RmW"/>
+                <constraint firstItem="gU8-hW-VIs" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9aN-zj-3aA"/>
+                <constraint firstAttribute="trailing" secondItem="gU8-hW-VIs" secondAttribute="trailing" id="I0b-rL-Glf"/>
+                <constraint firstItem="gU8-hW-VIs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Uux-dC-ej1"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="435" height="138"/>
-            <point key="canvasLocation" x="409.4202898550725" y="182.8125"/>
+            <size key="customSize" width="448" height="138"/>
+            <connections>
+                <outlet property="castImage" destination="L1g-cK-Nvb" id="reg-2h-7Ub"/>
+                <outlet property="characterLabel" destination="T0w-Fd-GfB" id="RzW-yb-ZNk"/>
+                <outlet property="nameLabel" destination="cja-ju-CXR" id="fmy-CK-jbt"/>
+            </connections>
+            <point key="canvasLocation" x="418.84057971014494" y="182.8125"/>
         </collectionViewCell>
     </objects>
     <resources>
