--- a/TheMovieDatabase/Detail/View/CastCollectionViewCell.xib
+++ b/TheMovieDatabase/Detail/View/CastCollectionViewCell.xib
@@ -52,7 +52,7 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-image" translatesAutoresizingMaskIntoConstraints="NO" id="L1g-cK-Nvb">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noImage" translatesAutoresizingMaskIntoConstraints="NO" id="L1g-cK-Nvb">
                                 <rect key="frame" x="0.0" y="0.0" width="53" height="79"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="53" id="ofR-1J-aBN"/>
@@ -96,6 +96,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="no-image" width="250" height="250"/>
+        <image name="noImage" width="250" height="250"/>
     </resources>
 </document>
