--- a/TheMovieDatabase/List/View/ListCollectionViewCell.xib
+++ b/TheMovieDatabase/List/View/ListCollectionViewCell.xib
@@ -22,7 +22,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="efj-eg-N00">
                         <rect key="frame" x="8" y="0.0" width="555" height="152"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-image" translatesAutoresizingMaskIntoConstraints="NO" id="yfd-yZ-Ght">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noImage" translatesAutoresizingMaskIntoConstraints="NO" id="yfd-yZ-Ght">
                                 <rect key="frame" x="0.0" y="0.0" width="100" height="152"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="Dyi-a7-BZ9"/>
@@ -105,6 +105,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="no-image" width="250" height="250"/>
+        <image name="noImage" width="250" height="250"/>
     </resources>
 </document>
